--- a/index.html
+++ b/index.html
@@ -603,17 +603,48 @@
   </div>
 
 </section>
+<!-- فوتر الموقع: تنويه قانوني + سوشيال + حقوق النشر -->
+
+<footer class="site-footer">
+
+  <!-- Disclaimer -->
+  <p class="footer-disclaimer">
+    This website does not retain any files on its server.
+    It only provides links to media content hosted by third-party services.
+  </p>
+
+  <!-- Social icons -->
+  <div class="footer-social">
+    <a href="#" aria-label="Facebook" rel="nofollow noopener"></a>
+    <a href="#" aria-label="Instagram" rel="nofollow noopener"></a>
+    <a href="#" aria-label="Telegram" rel="nofollow noopener"></a>
+  </div>
+
+  <!-- Copyright -->
+  <div class="footer-bottom">
+    <div class="footer-brand">
+      كرتوني <span class="brand-dot">🔥</span>
+    </div>
+
+    <p class="footer-copy">
+      © 2026 جميع الحقوق محفوظة
+    </p>
+
+    <nav class="footer-links">
+      <a href="/privacy-policy.html">سياسة الخصوصية</a>
+      <span>|</span>
+      <a href="/terms-of-use.html">شروط الاستخدام</a>
+    </nav>
+  </div>
+
+</footer>
 
 <!-- ================================== -->
 <!--  ملفات JavaScript                  -->
 <!-- ================================== -->
 
-<!-- Hero Slider (مستقل) -->
 <script src="./assets/js/hero-slider.js" defer></script>
-
-<!-- الملف الرئيسي -->
 <script src="./assets/js/main.js" defer></script>
-
 
 </body>
 </html>
