--- a/index.html
+++ b/index.html
@@ -603,31 +603,33 @@
   </div>
 
 </section>
+
 <!-- فوتر الموقع: تنويه قانوني + سوشيال + حقوق النشر -->
 
 <footer class="site-footer">
 
-  <!-- Disclaimer -->
+  <!-- تنويه قانوني -->
   <p class="footer-disclaimer">
-    This website does not retain any files on its server.
-    It only provides links to media content hosted by third-party services.
+    موقع Toonia لا يقوم باستضافة أي ملفات على خوادمه.
+    جميع المواد المعروضة يتم توفيرها من خلال روابط أو خدمات خارجية مستقلة،
+    ولا يتحمّل الموقع أي مسؤولية عن محتوى هذه الجهات.
   </p>
 
-  <!-- Social icons -->
+  <!-- روابط التواصل -->
   <div class="footer-social">
     <a href="#" aria-label="Facebook" rel="nofollow noopener"></a>
     <a href="#" aria-label="Instagram" rel="nofollow noopener"></a>
     <a href="#" aria-label="Telegram" rel="nofollow noopener"></a>
   </div>
 
-  <!-- Copyright -->
   <div class="footer-bottom">
+
     <div class="footer-brand">
-      كرتوني <span class="brand-dot">🔥</span>
+      Toonia <span class="brand-dot">🔥</span>
     </div>
 
     <p class="footer-copy">
-      © 2026 جميع الحقوق محفوظة
+      جميع الحقوق محفوظة
     </p>
 
     <nav class="footer-links">
@@ -635,6 +637,7 @@
       <span>|</span>
       <a href="/terms-of-use.html">شروط الاستخدام</a>
     </nav>
+
   </div>
 
 </footer>
