--- a/index.html
+++ b/index.html
@@ -625,8 +625,15 @@
   <div class="footer-bottom">
 
     <div class="footer-brand">
-      Toonia <span class="brand-dot">🔥</span>
-    </div>
+  <img
+    src="/assets/images/brand/toonia-logo.svg"
+    alt="Toonia Logo"
+    width="120"
+    height="36"
+    loading="lazy"
+    decoding="async"
+  >
+</div>
 
     <p class="footer-copy">
       جميع الحقوق محفوظة
