--- a/index.html
+++ b/index.html
@@ -625,14 +625,22 @@
   <div class="footer-bottom">
 
     <div class="footer-brand">
-  <img
-    src="/assets/images/brand/toonia-logo.svg"
-    alt="Toonia Logo"
-    width="120"
-    height="36"
-    loading="lazy"
-    decoding="async"
-  >
+  <a href="/toonia/" class="footer-logo">
+
+    <img
+      src="https://i.ibb.co/WWQtfGzs/logo.png"
+      alt="Toonia Logo"
+      width="36"
+      height="36"
+      loading="lazy"
+      decoding="async"
+    >
+
+    <span class="footer-site-name">
+      Too<span>nia</span>
+    </span>
+
+  </a>
 </div>
 
     <p class="footer-copy">
