--- a/index.html
+++ b/index.html
@@ -240,7 +240,8 @@
 <section class="most-watched">
 
   <div class="section-header">
-    <h2>الحلقات الجديدة</h2>
+  <h2>أحدث الحلقات</h2>
+</div>
 
     <div class="section-arrows">
       <button class="arrow prev" data-target="newEpisodesSlider" aria-label="السابق">‹</button>
