--- a/index.html
+++ b/index.html
@@ -240,8 +240,7 @@
 <section class="most-watched">
 
   <div class="section-header">
-  <h2>أحدث الحلقات</h2>
-</div>
+    <h2>أحدث الحلقات</h2>
 
     <div class="section-arrows">
       <button class="arrow prev" data-target="newEpisodesSlider" aria-label="السابق">‹</button>
@@ -484,26 +483,15 @@
 <!--  مع رابط لصفحة جميع الأعمال       -->
 <!-- ================================== -->
 
-   <section class="all-works-preview" aria-label="جميع الأعمال">
+    <section class="all-works-preview" aria-label="جميع الأعمال">
 
-  <!-- عنوان القسم + شريط البحث -->
+  <!-- عنوان القسم -->
   <div class="section-header">
-
     <h2>جميع الأعمال</h2>
-
-    <!-- شريط البحث (فعلي) -->
-    <div class="section-search">
-      <input
-        type="search"
-        placeholder="ابحث في جميع الأعمال..."
-        aria-label="بحث في جميع الأعمال"
-        data-search-target="allWorksGrid">
-    </div>
-
   </div>
 
   <!-- شبكة عرض الأعمال -->
-  <div class="works-grid" id="allWorksGrid">
+  <div class="works-grid">
 
     <article class="work-card">
       <a href="/work/conan">
