--- a/index.html
+++ b/index.html
@@ -13,7 +13,14 @@
 
     <!-- عنوان الصفحة (مهم للـ SEO) -->
     <title>Toonia - عالم الأنمي</title>
-    
+
+    <!-- ================================== -->
+    <!--  خط Cairo (إجباري قبل CSS)         -->
+    <!-- ================================== -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;500;600;700&display=swap" rel="stylesheet">
+
     <!-- ================================== -->
     <!--  ملفات CSS الخارجية                -->
     <!-- ================================== -->
