--- a/index.html
+++ b/index.html
@@ -492,9 +492,21 @@
 
     <section class="all-works-preview" aria-label="جميع الأعمال">
 
-  <!-- عنوان القسم -->
+  <!-- عنوان القسم + البحث -->
   <div class="section-header">
+
     <h2>جميع الأعمال</h2>
+
+    <!-- خانة البحث -->
+    <div class="section-search">
+      <i class="fas fa-search search-icon"></i>
+      <input
+        type="search"
+        placeholder="البحث في المرفوعات"
+        aria-label="البحث في جميع الأعمال"
+      >
+    </div>
+
   </div>
 
   <!-- شبكة عرض الأعمال -->
