--- a/index.html
+++ b/index.html
@@ -496,6 +496,16 @@
   <div class="section-header">
 
     <h2>جميع الأعمال</h2>
+    
+        <!-- الأنواع -->
+    <div class="genres">
+      <button class="genre all">الكل</button>
+      <button class="genre action">أكشن</button>
+      <button class="genre adventure">مغامرة</button>
+      <button class="genre comedy">كوميديا</button>
+      <button class="genre drama">دراما</button>
+      <button class="genre fantasy">فانتازيا</button>
+    </div>
 
     <!-- خانة البحث -->
     <div class="section-search">
