--- a/index.html
+++ b/index.html
@@ -492,22 +492,10 @@
 
     <section class="all-works-preview" aria-label="جميع الأعمال">
 
-  <!-- عنوان القسم + البحث -->
+  <!-- الصف الأول: العنوان + البحث -->
   <div class="section-header">
-
     <h2>جميع الأعمال</h2>
-    
-        <!-- الأنواع -->
-    <div class="genres">
-  <button class="genre all">الكل</button>
-  <button class="genre action">أكشن</button>
-  <button class="genre adventure">مغامرة</button>
-  <button class="genre comedy">كوميديا</button>
-  <button class="genre drama">دراما</button>
-  <button class="genre fantasy">فانتازيا</button>
-</div>
 
-    <!-- خانة البحث -->
     <div class="section-search">
       <i class="fas fa-search search-icon"></i>
       <input
@@ -516,12 +504,21 @@
         aria-label="البحث في جميع الأعمال"
       >
     </div>
-
   </div>
 
-  <!-- شبكة عرض الأعمال -->
-  <div class="works-grid">
+  <!-- الصف الثاني: الأنواع -->
+  <div class="genres">
+    <button class="genre active">الكل</button>
+    <button class="genre">أكشن</button>
+    <button class="genre">مغامرة</button>
+    <button class="genre">كوميديا</button>
+    <button class="genre">دراما</button>
+    <button class="genre">فانتازيا</button>
+  </div>
 
+  <!-- شبكة الأعمال -->
+  <div class="works-grid">
+    
     <article class="work-card">
       <a href="/work/conan">
         <img
