--- a/index.html
+++ b/index.html
@@ -492,10 +492,22 @@
 
     <section class="all-works-preview" aria-label="جميع الأعمال">
 
-  <!-- السطر الأول: العنوان + البحث -->
+  <!-- عنوان القسم + البحث -->
   <div class="section-header">
-    <h2>جميع الأعمال</h2>
 
+    <h2>جميع الأعمال</h2>
+    
+        <!-- الأنواع -->
+    <div class="genres">
+  <button class="genre all">الكل</button>
+  <button class="genre action">أكشن</button>
+  <button class="genre adventure">مغامرة</button>
+  <button class="genre comedy">كوميديا</button>
+  <button class="genre drama">دراما</button>
+  <button class="genre fantasy">فانتازيا</button>
+</div>
+
+    <!-- خانة البحث -->
     <div class="section-search">
       <i class="fas fa-search search-icon"></i>
       <input
@@ -504,21 +516,12 @@
         aria-label="البحث في جميع الأعمال"
       >
     </div>
-  </div>
 
-  <!-- السطر الثاني: الأنواع -->
-  <div class="genres">
-    <button class="genre all">الكل</button>
-    <button class="genre action">أكشن</button>
-    <button class="genre adventure">مغامرة</button>
-    <button class="genre comedy">كوميديا</button>
-    <button class="genre drama">دراما</button>
-    <button class="genre fantasy">فانتازيا</button>
   </div>
 
   <!-- شبكة عرض الأعمال -->
   <div class="works-grid">
-   
+
     <article class="work-card">
       <a href="/work/conan">
         <img
