--- a/index.html
+++ b/index.html
@@ -513,11 +513,11 @@
 <!--  مع رابط لصفحة جميع الأعمال       -->
 <!-- ================================== -->
 
-    <section class="all-works-preview" aria-label="جميع الأعمال">
+   <section class="all-works-preview" aria-label="جميع الأعمال">
 
-  <div class="section-header">
+  <div class="section-header all-works-header">
 
-    <!-- ✅ السطر الأول: العنوان + البحث -->
+    <!-- السطر الأول: العنوان + البحث -->
     <div class="section-header-top">
       <h2>جميع الأعمال</h2>
 
@@ -526,12 +526,11 @@
         <input
           type="search"
           placeholder="البحث في المرفوعات"
-          aria-label="البحث في جميع الأعمال"
-        >
+          aria-label="البحث في جميع الأعمال">
       </div>
     </div>
 
-    <!-- ✅ السطر الثاني: الأنواع فقط -->
+    <!-- السطر الثاني: الأنواع -->
     <div class="genres">
       <button class="genre all">الكل</button>
       <button class="genre action">أكشن</button>
