--- a/index.html
+++ b/index.html
@@ -542,20 +542,14 @@
 
   </div>
 
-  <!-- شبكة عرض الأعمال -->
+    <!-- شبكة الأعمال -->
   <div class="works-grid">
-    ...
-  </div>
-
-</section>
 
     <article class="work-card">
       <a href="/work/conan">
-        <img
-          src="https://i.ibb.co/GQfWzYn9/88hd-Ye-Gnh0-G89-Kosw9u-NZR4zk-Cv.webp"
-          alt="المحقق كونان"
-          loading="lazy"
-        >
+        <img src="https://i.ibb.co/GQfWzYn9/88hd-Ye-Gnh0-G89-Kosw9u-NZR4zk-Cv.webp"
+             alt="المحقق كونان"
+             loading="lazy">
       </a>
     </article>
 
