--- a/index.html
+++ b/index.html
@@ -531,14 +531,16 @@
     </div>
 
     <!-- السطر الثاني: الأنواع -->
-    <div class="genres">
-      <button class="genre all">الكل</button>
-      <button class="genre action">أكشن</button>
-      <button class="genre adventure">مغامرة</button>
-      <button class="genre comedy">كوميديا</button>
-      <button class="genre drama">دراما</button>
-      
-    </div>
+    <div class="filters">
+
+  <button class="filter active">الكل</button>
+  <button class="filter">أنمي</button>
+  <button class="filter">كرتون</button>
+  <button class="filter">مدبلج</button>
+  <button class="filter">مترجم</button>
+  <button class="filter">مكتمل</button>
+
+</div>
 
   </div>
 
