--- a/index.html
+++ b/index.html
@@ -531,15 +531,14 @@
     </div>
 
     <!-- السطر الثاني: الأنواع -->
-    
-<div class="filters">
+<div class="genres">
 
-  <button class="filter active">الكل</button>
-  <button class="filter">أنمي</button>
-  <button class="filter">كرتون</button>
-  <button class="filter">مدبلج</button>
-  <button class="filter">مترجم</button>
-  <button class="filter">مكتمل</button>
+  <button class="genre all">الكل</button>
+  <button class="genre action">أنمي</button>
+  <button class="genre adventure">كرتون</button>
+  <button class="genre comedy">مدبلج</button>
+  <button class="genre drama">مترجم</button>
+  <button class="genre completed">مكتمل</button>
 
 </div>
 
