--- a/index.html
+++ b/index.html
@@ -518,17 +518,19 @@
   <div class="section-header all-works-header">
 
     <!-- السطر الأول: العنوان + البحث -->
-    <div class="section-header-top">
-      <h2>جميع الأعمال</h2>
+<div class="section-header-top">
 
-      <div class="section-search">
-        <i class="fas fa-search search-icon"></i>
-        <input
-          type="search"
-          placeholder="البحث في المرفوعات"
-          aria-label="البحث في جميع الأعمال">
-      </div>
-    </div>
+  <h2 class="section-title">جميع الأعمال</h2>
+
+  <div class="section-search">
+    <span class="search-icon" aria-hidden="true"></span>
+    <input
+      type="search"
+      placeholder="البحث في المرفوعات"
+      aria-label="البحث في جميع الأعمال">
+  </div>
+
+</div>
 
     <!-- السطر الثاني: الأنواع -->
 <div class="genres">
