--- a/index.html
+++ b/index.html
@@ -513,76 +513,143 @@
 <!--  مع رابط لصفحة جميع الأعمال       -->
 <!-- ================================== -->
 
-<section class="all-works-preview" aria-label="جميع الأعمال">
+   <section class="all-works-preview" aria-label="جميع الأعمال">
 
   <div class="section-header all-works-header">
 
-    <div class="section-header-top">
-      <h2 class="section-title">جميع الأعمال</h2>
+    <!-- السطر الأول: العنوان + البحث -->
+<div class="section-header-top">
 
-      <div class="section-search">
-        <span class="search-icon" aria-hidden="true"></span>
-        <input 
-          type="search" 
-          placeholder="البحث في المرفوعات" 
-          aria-label="البحث في جميع الأعمال">
-      </div>
-    </div>
+  <h2 class="section-title">جميع الأعمال</h2>
 
-    <div class="genres">
-      <button class="genre active">الكل</button> <button class="genre">أنمي</button>
-      <button class="genre">كرتون</button>
-      <button class="genre">مدبلج</button>
-      <button class="genre">مترجم</button>
-    </div>
+  <div class="section-search">
+    <span class="search-icon" aria-hidden="true"></span>
+    <input
+      type="search"
+      placeholder="البحث في المرفوعات"
+      aria-label="البحث في جميع الأعمال">
+  </div>
+
+</div>
+
+    <!-- السطر الثاني: الأنواع -->
+<div class="genres">
+
+  <button class="genre all">الكل</button>
+  <button class="genre action">أنمي</button>
+  <button class="genre adventure">كرتون</button>
+  <button class="genre comedy">مدبلج</button>
+  <button class="genre drama">مترجم</button>
+  
+</div>
 
   </div>
 
+    <!-- شبكة الأعمال -->
   <div class="works-grid">
 
     <article class="work-card">
       <a href="/work/conan">
-        <div class="work-rating">⭐ 8.9</div> <div class="work-status">مستمر</div> <img src="https://i.ibb.co/GQfWzYn9/88hd-Ye-Gnh0-G89-Kosw9u-NZR4zk-Cv.webp" 
-             alt="المحقق كونان" 
+        <img src="https://i.ibb.co/GQfWzYn9/88hd-Ye-Gnh0-G89-Kosw9u-NZR4zk-Cv.webp"
+             alt="المحقق كونان"
              loading="lazy">
       </a>
     </article>
 
     <article class="work-card">
       <a href="/work/bluey">
-        <div class="work-rating">⭐ 9.5</div>
-        <div class="work-status">منتهي</div>
-        <img src="https://i.ibb.co/XrJd6dV9/ao-Qvb4i-POa-Pjq7-ZQ2-Ra-ZIBOxam-O.webp" 
-             alt="Bluey" 
-             loading="lazy">
+        <img
+          src="https://i.ibb.co/XrJd6dV9/ao-Qvb4i-POa-Pjq7-ZQ2-Ra-ZIBOxam-O.webp"
+          alt="Bluey cartoon poster"
+          loading="lazy"
+        >
       </a>
     </article>
 
     <article class="work-card">
       <a href="/work/bluey">
-        <div class="work-rating">⭐ 7.8</div>
-        <div class="work-status">HD</div>
-        <img src="https://i.ibb.co/dwBTj7BS/a-UFQn5-TFQKSMWp46-G5-R1ju2-GWIb.webp" alt="Bluey" loading="lazy">
+        <img
+          src="https://i.ibb.co/dwBTj7BS/a-UFQn5-TFQKSMWp46-G5-R1ju2-GWIb.webp"
+          alt="Bluey cartoon poster"
+          loading="lazy"
+        >
       </a>
     </article>
 
     <article class="work-card">
       <a href="/work/bluey">
-        <div class="work-rating">⭐ 8.2</div>
-        <div class="work-status">مستمر</div>
-        <img src="https://i.ibb.co/nhPm9KQ/b-GOi-P1-EKSf7d1czy-JEwsur-Lz1-NI.webp" alt="Bluey" loading="lazy">
+        <img
+          src="https://i.ibb.co/nhPm9KQ/b-GOi-P1-EKSf7d1czy-JEwsur-Lz1-NI.webp"
+          alt="Bluey cartoon poster"
+          loading="lazy"
+        >
       </a>
     </article>
 
     <article class="work-card">
       <a href="/work/bluey">
-        <div class="work-rating">⭐ 9.0</div>
-        <div class="work-status">جديد</div>
-        <img src="https://i.ibb.co/YTq2vJmh/URy-Rw-DZZp3-Ti-Zb-R7-CVVh9e9-SUd.webp" alt="Bluey" loading="lazy">
+        <img
+          src="https://i.ibb.co/YTq2vJmh/URy-Rw-DZZp3-Ti-Zb-R7-CVVh9e9-SUd.webp"
+          alt="بوستر مسلسل بلو"
+          loading="lazy"
+        >
       </a>
     </article>
 
-    </div><div class="view-all-wrapper">
+    <article class="work-card">
+      <a href="/work/conan">
+        <img
+          src="https://i.ibb.co/GQfWzYn9/88hd-Ye-Gnh0-G89-Kosw9u-NZR4zk-Cv.webp"
+          alt="المحقق كونان"
+          loading="lazy"
+        >
+      </a>
+    </article>
+
+    <article class="work-card">
+      <a href="/work/bluey">
+        <img
+          src="https://i.ibb.co/ZRwq56CJ/di2a-Hecm5-JNC1-HUIa4l-Kz9cny-RD.webp"
+          alt="Bluey cartoon poster"
+          loading="lazy"
+        >
+      </a>
+    </article>
+
+    <article class="work-card">
+      <a href="/work/bluey">
+        <img
+          src="https://i.ibb.co/8LN8LxmZ/e3i8-K5-W4p2-JLGMa-Px-RWH1-Hr9r-M2.webp"
+          alt="Bluey cartoon poster"
+          loading="lazy"
+        >
+      </a>
+    </article>
+
+    <article class="work-card">
+      <a href="/work/bluey">
+        <img
+          src="https://i.ibb.co/FqCTS3WH/m-UJGt-ID4-Uy-O6n-LE0-Ztqq48y4-Hdw.webp"
+          alt="Bluey cartoon poster"
+          loading="lazy"
+        >
+      </a>
+    </article>
+
+    <article class="work-card">
+      <a href="/toonia/work/blue">
+        <img
+          src="https://i.ibb.co/YTq2vJmh/URy-Rw-DZZp3-Ti-Zb-R7-CVVh9e9-SUd.webp"
+          alt="بوستر مسلسل بلو"
+          loading="lazy"
+        >
+      </a>
+    </article>
+
+  </div><!-- /.works-grid -->
+
+  <!-- زر عرض جميع الأعمال -->
+  <div class="view-all-wrapper">
     <a href="/toonia/works/" class="view-all-btn">
       عرض جميع الأعمال
     </a>
