--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
 <section class="most-watched">
 
   <div class="section-header">
-    <h2>أحدث الحلقات</h2>
+    <h2 class="section-title">أحدث الحلقات</h2>
 
     <div class="section-arrows">
       <button class="arrow prev" data-target="newEpisodesSlider" aria-label="السابق">‹</button>
@@ -279,7 +279,7 @@
   </div>
 
   <div class="slider-wrapper">
-<div class="slider" id="newEpisodesSlider">
+    <div class="slider" id="newEpisodesSlider">
 
       <article class="slide">
   <a href="#">
