--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
 <section class="most-watched">
 
   <div class="section-header">
-    <h2>الأكثر مشاهدة</h2>
+    <h2 class="section-title">الأكثر مشاهدة</h2>
 
     <div class="section-arrows">
       <button class="arrow prev" data-target="mostWatchedSlider" aria-label="السابق">‹</button>
