--- a/index.html
+++ b/index.html
@@ -283,71 +283,118 @@
 
       <article class="slide">
   <a href="#">
+    <div class="card-badges">
+      <span class="badge quality">HD</span>
+      <span class="badge type anime">Anime</span>
+      <span class="badge status ongoing">مستمر</span>
+    </div>
+
     <img src="https://i.ibb.co/tTwd183W/new-1.webp" alt="حلقة جديدة 1" loading="lazy">
-    <span class="badge">HD</span>
   </a>
 </article>
 
 <article class="slide">
   <a href="#">
+    <div class="card-badges">
+      <span class="badge quality">HD</span>
+      <span class="badge type anime">Anime</span>
+      <span class="badge status ongoing">مستمر</span>
+    </div>
+
     <img src="https://i.ibb.co/F2233G4/new-2.webp" alt="حلقة جديدة 2" loading="lazy">
-    <span class="badge">HD</span>
   </a>
 </article>
 
 <article class="slide">
   <a href="#">
+    <div class="card-badges">
+      <span class="badge quality">HD</span>
+      <span class="badge type cartoon">Cartoon</span>
+      <span class="badge status completed">مكتمل</span>
+    </div>
+
     <img src="https://i.ibb.co/prPPKq8d/new-3.webp" alt="حلقة جديدة 3" loading="lazy">
-    <span class="badge">HD</span>
   </a>
 </article>
 
 <article class="slide">
   <a href="#">
+    <div class="card-badges">
+      <span class="badge quality">HD</span>
+      <span class="badge type movie">Movie</span>
+    </div>
+
     <img src="https://i.ibb.co/hxFLFZDM/new-4.jpg" alt="حلقة جديدة 4" loading="lazy">
-    <span class="badge">HD</span>
   </a>
 </article>
 
 <article class="slide">
   <a href="#">
+    <div class="card-badges">
+      <span class="badge quality">HD</span>
+      <span class="badge type anime">Anime</span>
+      <span class="badge status ongoing">مستمر</span>
+    </div>
+
     <img src="https://i.ibb.co/xKFSWd3P/new-5.jpg" alt="حلقة جديدة 5" loading="lazy">
-    <span class="badge">HD</span>
   </a>
 </article>
 
 <article class="slide">
   <a href="#">
+    <div class="card-badges">
+      <span class="badge quality">HD</span>
+      <span class="badge type anime">Anime</span>
+      <span class="badge status completed">مكتمل</span>
+    </div>
+
     <img src="https://i.ibb.co/9mMxBDMG/new-6.jpg" alt="حلقة جديدة 6" loading="lazy">
-    <span class="badge">HD</span>
   </a>
 </article>
 
 <article class="slide">
   <a href="#">
+    <div class="card-badges">
+      <span class="badge quality">HD</span>
+      <span class="badge type cartoon">Cartoon</span>
+    </div>
+
     <img src="https://i.ibb.co/bMHHcCwP/new-7.jpg" alt="حلقة جديدة 7" loading="lazy">
-    <span class="badge">HD</span>
   </a>
 </article>
 
 <article class="slide">
   <a href="#">
+    <div class="card-badges">
+      <span class="badge quality">HD</span>
+      <span class="badge type movie">Movie</span>
+    </div>
+
     <img src="https://i.ibb.co/p6D7TXjF/new-8.jpg" alt="حلقة جديدة 8" loading="lazy">
-    <span class="badge">HD</span>
   </a>
 </article>
 
 <article class="slide">
   <a href="#">
+    <div class="card-badges">
+      <span class="badge quality">HD</span>
+      <span class="badge type anime">Anime</span>
+      <span class="badge status ongoing">مستمر</span>
+    </div>
+
     <img src="https://i.ibb.co/N6k4PB8j/new-9.webp" alt="حلقة جديدة 9" loading="lazy">
-    <span class="badge">HD</span>
   </a>
 </article>
 
 <article class="slide">
   <a href="#">
+    <div class="card-badges">
+      <span class="badge quality">HD</span>
+      <span class="badge type anime">Anime</span>
+      <span class="badge status completed">مكتمل</span>
+    </div>
+
     <img src="https://i.ibb.co/rPhWMTZ/new-10.webp" alt="حلقة جديدة 10" loading="lazy">
-    <span class="badge">HD</span>
   </a>
 </article>
 
