--- a/index.html
+++ b/index.html
@@ -423,125 +423,121 @@
 
   <div class="slider-wrapper">
     <div class="slider" id="mostWatchedSlider">
-      
-      <!-- بطاقة عمل: المحقق كونان -->
+
+<!-- 1 -->
 <article class="slide">
   <a href="#">
-    <img
-      src="https://i.ibb.co/C3X8hXYz/Top-1.jpg"
-      alt="أنمي الأكثر مشاهدة 1"
-      width="120"
-      height="180"
-      loading="lazy">
-    <span class="badge">HD</span>
+    <div class="card-badges">
+      <span class="badge quality">HD</span>
+      <span class="badge type anime">Anime</span>
+      <span class="badge status ongoing">مستمر</span>
+    </div>
+    <img src="https://i.ibb.co/C3X8hXYz/Top-1.jpg" alt="أنمي الأكثر مشاهدة 1" loading="lazy">
   </a>
 </article>
 
+<!-- 2 -->
 <article class="slide">
   <a href="#">
-    <img
-      src="https://i.ibb.co/s9zRVQwT/Top-2.jpg"
-      alt="أنمي الأكثر مشاهدة 2"
-      width="120"
-      height="180"
-      loading="lazy">
-    <span class="badge">HD</span>
+    <div class="card-badges">
+      <span class="badge quality">HD</span>
+      <span class="badge type anime">Anime</span>
+      <span class="badge status ongoing">مستمر</span>
+    </div>
+    <img src="https://i.ibb.co/s9zRVQwT/Top-2.jpg" alt="أنمي الأكثر مشاهدة 2" loading="lazy">
   </a>
 </article>
 
+<!-- 3 -->
 <article class="slide">
   <a href="#">
-    <img
-      src="https://i.ibb.co/JDvtpgJ/Top-3.jpg"
-      alt="أنمي الأكثر مشاهدة 3"
-      width="120"
-      height="180"
-      loading="lazy">
-    <span class="badge">HD</span>
+    <div class="card-badges">
+      <span class="badge quality">HD</span>
+      <span class="badge type anime">Anime</span>
+      <span class="badge status completed">مكتمل</span>
+    </div>
+    <img src="https://i.ibb.co/JDvtpgJ/Top-3.jpg" alt="أنمي الأكثر مشاهدة 3" loading="lazy">
   </a>
 </article>
 
+<!-- 4 -->
 <article class="slide">
   <a href="#">
-    <img
-      src="https://i.ibb.co/zVggXTP1/Top-4.jpg"
-      alt="أنمي الأكثر مشاهدة 4"
-      width="120"
-      height="180"
-      loading="lazy">
-    <span class="badge">HD</span>
+    <div class="card-badges">
+      <span class="badge quality">HD</span>
+      <span class="badge type movie">Movie</span>
+    </div>
+    <img src="https://i.ibb.co/zVggXTP1/Top-4.jpg" alt="فيلم الأكثر مشاهدة 4" loading="lazy">
   </a>
 </article>
 
+<!-- 5 -->
 <article class="slide">
   <a href="#">
-    <img
-      src="https://i.ibb.co/jKYtZh8/Top-5.jpg"
-      alt="أنمي الأكثر مشاهدة 5"
-      width="120"
-      height="180"
-      loading="lazy">
-    <span class="badge">HD</span>
+    <div class="card-badges">
+      <span class="badge quality">HD</span>
+      <span class="badge type anime">Anime</span>
+      <span class="badge status ongoing">مستمر</span>
+    </div>
+    <img src="https://i.ibb.co/jKYtZh8/Top-5.jpg" alt="أنمي الأكثر مشاهدة 5" loading="lazy">
   </a>
 </article>
 
+<!-- 6 -->
 <article class="slide">
   <a href="#">
-    <img
-      src="https://i.ibb.co/Q3jL1krt/Top-6.jpg"
-      alt="أنمي الأكثر مشاهدة 6"
-      width="120"
-      height="180"
-      loading="lazy">
-    <span class="badge">HD</span>
+    <div class="card-badges">
+      <span class="badge quality">HD</span>
+      <span class="badge type anime">Anime</span>
+      <span class="badge status completed">مكتمل</span>
+    </div>
+    <img src="https://i.ibb.co/Q3jL1krt/Top-6.jpg" alt="أنمي الأكثر مشاهدة 6" loading="lazy">
   </a>
 </article>
 
+<!-- 7 -->
 <article class="slide">
   <a href="#">
-    <img
-      src="https://i.ibb.co/tggnMHG/Top-7.jpg"
-      alt="أنمي الأكثر مشاهدة 7"
-      width="120"
-      height="180"
-      loading="lazy">
-    <span class="badge">HD</span>
+    <div class="card-badges">
+      <span class="badge quality">HD</span>
+      <span class="badge type cartoon">Cartoon</span>
+    </div>
+    <img src="https://i.ibb.co/tggnMHG/Top-7.jpg" alt="كرتون الأكثر مشاهدة 7" loading="lazy">
   </a>
 </article>
 
+<!-- 8 -->
 <article class="slide">
   <a href="#">
-    <img
-      src="https://i.ibb.co/zTZ0t73J/Top-8.jpg"
-      alt="أنمي الأكثر مشاهدة 8"
-      width="120"
-      height="180"
-      loading="lazy">
-    <span class="badge">HD</span>
+    <div class="card-badges">
+      <span class="badge quality">HD</span>
+      <span class="badge type movie">Movie</span>
+    </div>
+    <img src="https://i.ibb.co/zTZ0t73J/Top-8.jpg" alt="فيلم الأكثر مشاهدة 8" loading="lazy">
   </a>
 </article>
 
+<!-- 9 -->
 <article class="slide">
   <a href="#">
-    <img
-      src="https://i.ibb.co/v69LKSRN/Top-9.jpg"
-      alt="أنمي الأكثر مشاهدة 9"
-      width="120"
-      height="180"
-      loading="lazy">
-    <span class="badge">HD</span>
+    <div class="card-badges">
+      <span class="badge quality">HD</span>
+      <span class="badge type anime">Anime</span>
+      <span class="badge status ongoing">مستمر</span>
+    </div>
+    <img src="https://i.ibb.co/v69LKSRN/Top-9.jpg" alt="أنمي الأكثر مشاهدة 9" loading="lazy">
   </a>
 </article>
 
+<!-- 10 -->
 <article class="slide">
   <a href="#">
-    <img
-      src="https://i.ibb.co/MDrLCtdQ/Top-10.jpg"
-      alt="أنمي الأكثر مشاهدة 10"
-      width="120"
-      height="180"
-      loading="lazy">
-    <span class="badge">HD</span>
+    <div class="card-badges">
+      <span class="badge quality">HD</span>
+      <span class="badge type anime">Anime</span>
+      <span class="badge status completed">مكتمل</span>
+    </div>
+    <img src="https://i.ibb.co/MDrLCtdQ/Top-10.jpg" alt="أنمي الأكثر مشاهدة 10" loading="lazy">
   </a>
 </article>
 
@@ -551,7 +547,6 @@
     <div class="slider-dots" data-slider="mostWatchedSlider"></div>
 
   </div>
-
 </section>
 
 <!-- ================================== -->
