--- a/index.html
+++ b/index.html
@@ -283,8 +283,16 @@
 
       <article class="slide">
   <a href="#">
-    <img src="https://i.ibb.co/tTwd183W/new-1.webp" alt="حلقة جديدة 1" loading="lazy">
-    <span class="badge">HD</span>
+    <img
+      src="https://i.ibb.co/tTwd183W/new-1.webp"
+      alt="حلقة جديدة 1"
+      loading="lazy"
+    >
+
+    <!-- Badges (نفس منطق HD) -->
+    <span class="badge quality">HD</span>
+    <span class="badge type anime">Anime</span>
+    <span class="badge status ongoing">مستمر</span>
   </a>
 </article>
 
