--- a/index.html
+++ b/index.html
@@ -283,16 +283,14 @@
 
       <article class="slide">
   <a href="#">
-    <img
-      src="https://i.ibb.co/tTwd183W/new-1.webp"
-      alt="حلقة جديدة 1"
-      loading="lazy"
-    >
+    <img src="https://i.ibb.co/tTwd183W/new-1.webp" alt="حلقة جديدة 1" loading="lazy">
 
-    <!-- Badges (نفس منطق HD) -->
-    <span class="badge quality">HD</span>
-    <span class="badge type anime">Anime</span>
-    <span class="badge status ongoing">مستمر</span>
+    <!-- هذا الوحيد الذي سيبقى -->
+    <span class="badge">HD</span>
+
+    <!-- بادجات إضافية بدون التأثير على HD -->
+    <span class="type-badge anime">Anime</span>
+    <span class="status-badge ongoing">مستمر</span>
   </a>
 </article>
 
