--- a/index.html
+++ b/index.html
@@ -379,14 +379,19 @@
       
       <!-- بطاقة عمل: المحقق كونان -->
 <article class="slide">
-  <a href="#">
+  <a href="#" class="slide-link">
+
     <img
       src="https://i.ibb.co/C3X8hXYz/Top-1.jpg"
-      alt="أنمي الأكثر مشاهدة 1"
+      alt="أنمي الأكثر مشاهدة – مسلسل مستمر"
       width="120"
       height="180"
-      loading="lazy">
-    <span class="badge">HD</span>
+      loading="lazy"
+    >
+
+    <span class="badge badge-hd">HD</span>
+    <span class="badge badge-status badge-ongoing">مستمر</span>
+
   </a>
 </article>
 
