--- a/index.html
+++ b/index.html
@@ -379,19 +379,14 @@
       
       <!-- بطاقة عمل: المحقق كونان -->
 <article class="slide">
-  <a href="#" class="slide-link">
-
+  <a href="#">
     <img
       src="https://i.ibb.co/C3X8hXYz/Top-1.jpg"
-      alt="أنمي الأكثر مشاهدة – مسلسل مستمر"
+      alt="أنمي الأكثر مشاهدة 1"
       width="120"
       height="180"
-      loading="lazy"
-    >
-
-    <span class="badge badge-hd">HD</span>
-    <span class="badge badge-status badge-ongoing">مستمر</span>
-
+      loading="lazy">
+    <span class="badge">HD</span>
   </a>
 </article>
 
