--- a/index.html
+++ b/index.html
@@ -382,11 +382,18 @@
   <a href="#">
     <img
       src="https://i.ibb.co/C3X8hXYz/Top-1.jpg"
-      alt="أنمي الأكثر مشاهدة 1"
+      alt="أنمي"
       width="120"
       height="180"
       loading="lazy">
-    <span class="badge">HD</span>
+
+    <!-- الجودة -->
+    <span class="badge badge-hd">HD</span>
+
+    <!-- الحالة -->
+    <span class="badge badge-status status-ongoing">مستمر</span>
+    <!-- أو -->
+    <!-- <span class="badge badge-status status-completed">مكتمل</span> -->
   </a>
 </article>
 
