--- a/index.html
+++ b/index.html
@@ -387,13 +387,11 @@
       height="180"
       loading="lazy">
 
-    <!-- الجودة -->
-    <span class="badge badge-hd">HD</span>
-
-    <!-- الحالة -->
-    <span class="badge badge-status status-ongoing">مستمر</span>
-    <!-- أو -->
-    <!-- <span class="badge badge-status status-completed">مكتمل</span> -->
+    <!-- حاوية البادجات -->
+    <div class="badges">
+      <span class="badge badge-status status-ongoing">مستمر</span>
+      <span class="badge badge-hd">HD</span>
+    </div>
   </a>
 </article>
 
