--- a/index.html
+++ b/index.html
@@ -282,9 +282,18 @@
     <div class="slider" id="newEpisodesSlider">
 
       <article class="slide">
-  <a href="#">
-    <img src="https://i.ibb.co/tTwd183W/new-1.webp" alt="حلقة جديدة 1" loading="lazy">
+  <a href="/anime/al-batal-al-khumasi/episode-1/"
+     title="مشاهدة الحلقة 1 من البطل الخماسي مترجمة">
+
+    <img
+      src="https://i.ibb.co/tTwd183W/new-1.webp"
+      alt="مشاهدة الحلقة 1 من أنمي البطل الخماسي مترجمة HD"
+      loading="lazy"
+      decoding="async"
+    >
+
     <span class="badge">HD</span>
+
   </a>
 </article>
 
@@ -382,16 +391,11 @@
   <a href="#">
     <img
       src="https://i.ibb.co/C3X8hXYz/Top-1.jpg"
-      alt="أنمي"
+      alt="أنمي الأكثر مشاهدة 1"
       width="120"
       height="180"
       loading="lazy">
-
-    <!-- حاوية البادجات -->
-    <div class="badges">
-      <span class="badge badge-status status-ongoing">مستمر</span>
-      <span class="badge badge-hd">HD</span>
-    </div>
+    <span class="badge">HD</span>
   </a>
 </article>
 
